# zksync-os-interface

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/actions/runner-setup/: action.yaml
.github/release-please/: config.json
.github/workflows/: cargo-audit.yml  ci.yml  release-please.yml
crates/evm-errors/: Cargo.toml
crates/evm-errors/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/src/: error.rs  lib.rs  output.rs  tracing.rs  traits.rs  types.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  primitives.rs
