[workspace]
members = [
    "crates/interface", "crates/types",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-interface"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
alloy = { version = "1.0.30", default-features = false }
bytes = { version = "1.10.1", default-features = false }
portable-atomic = { version = "1.11.1", default-features = false }
serde = { version = "1.0.219", default-features = false }

zksync_os_types = { path = "crates/types", default-features = false }
