[package]
name = "zksync_os_interface"
description = "MultiVM interface for ZKsync OS"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-consensus = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["std", "serde"]
std = [
    "alloy-consensus/std",
    "alloy-primitives/std",
]
serde = [
    "alloy-consensus/serde",
    "alloy-primitives/serde",
    "dep:serde",
]
