[package]
name = "zksync_os_interface"
description = "MultiVM interface for ZKsync OS"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_evm_errors = { workspace = true }

alloy-consensus = { workspace = true, features = ["serde"] }
alloy-primitives = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
