[package]
name = "zksync_os_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives = { workspace = true, default-features = false }
bytes = { workspace = true, default-features = false }
portable-atomic = { version = "1.11.1", default-features = false, optional = true }
serde = { workspace = true, default-features = false, optional = true }

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "alloy-primitives/serde",
    "bytes/serde",
]
# Use portable-atomic crate to support platforms without atomic CAS.
portable-atomic = [
    "dep:portable-atomic",
    "bytes/extra-platforms",
    "portable-atomic/unsafe-assume-single-core"
]
